--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,8 @@
 	url = https://github.com/clarahapp/fundata
 	shallow = true
 	registered = true
+[submodule "MFPCA"]
+	path = MFPCA
+	url = https://github.com/clarahapp/mfpca
+	shallow = true
+	registered = true
